--- a/src/main/resources/com/example/demo1/game.fxml
+++ b/src/main/resources/com/example/demo1/game.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -11,7 +12,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.Game">
    <children>
@@ -276,6 +276,11 @@
                   <Image url="@../../../picss/rip.jpg" />
                </image>
             </ImageView>
+            <JFXCheckBox fx:id="hint" layoutX="14.0" layoutY="61.0" onAction="#showHint" text="Show Word Meaning" textFill="#ff5656">
+               <font>
+                  <Font size="19.0" />
+               </font>
+            </JFXCheckBox>
          </children>
       </AnchorPane>
    </children>
