--- a/src/main/resources/com/example/demo1/addword.fxml
+++ b/src/main/resources/com/example/demo1/addword.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.AddWord">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.AddWord">
    <children>
       <ImageView fitHeight="614.0" fitWidth="882.0" layoutX="-7.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../picss/bk2.png" />
+            <Image url="@../../../../../../../../../Downloads/stars-stars-texture-black-wallpaper-preview.jpg" />
          </image>
       </ImageView>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="532.0" prefWidth="871.0">
@@ -46,7 +46,7 @@
                   </LinearGradient>
                </unFocusColor>
             </JFXTextArea>
-            <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="640.0" layoutY="41.0" onAction="#wordAdd" prefHeight="69.0" prefWidth="161.0" styleClass="read" stylesheets="@../../../style.css" text="Confirm" textFill="#7b1a96">
+            <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="640.0" layoutY="41.0" onAction="#wordAdd" prefHeight="69.0" prefWidth="161.0" style="-fx-background-color: #40e0d0;" text="Confirm" textFill="#7b1a96">
                <font>
                   <Font name="Californian FB" size="22.0" />
                </font>
