--- a/src/main/resources/com/example/demo1/game.fxml
+++ b/src/main/resources/com/example/demo1/game.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.Game">
    <children>
@@ -192,6 +193,11 @@
                   <Font size="14.0" />
                </font>
             </TextArea>
+            <Label fx:id="yay" alignment="BOTTOM_CENTER" layoutX="29.0" layoutY="17.0" prefHeight="58.0" prefWidth="406.0" textFill="#fd0000">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
             <Pane fx:id="e1" layoutX="516.0" layoutY="269.0" prefHeight="58.0" prefWidth="330.0">
                <children>
                   <ImageView fitHeight="60.0" fitWidth="330.0" layoutX="-21.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
@@ -270,20 +276,6 @@
                   <Image url="@../../../picss/rip.jpg" />
                </image>
             </ImageView>
-            <JFXCheckBox fx:id="hint" layoutX="14.0" layoutY="61.0" onAction="#showHint" text="Show Word Meaning" textFill="#ff5656">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </JFXCheckBox>
-            <Button layoutX="11.0" layoutY="14.0" mnemonicParsing="false" onAction="#Back" prefHeight="41.0" prefWidth="36.0" styleClass="switch_button" stylesheets="@../../../style.css">
-               <graphic>
-                  <ImageView fitHeight="42.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../picss/back2.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
          </children>
       </AnchorPane>
    </children>
