--- a/src/main/resources/com/example/demo1/history.fxml
+++ b/src/main/resources/com/example/demo1/history.fxml
@@ -11,9 +11,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="532.0" prefWidth="871.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.tabs.History">
    <children>
-      <ImageView fitHeight="541.0" fitWidth="951.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="538.0" fitWidth="879.0" pickOnBounds="true">
          <image>
-            <Image url="@../../../picss/bk4.png" />
+            <Image url="@../../../picss/2541516002.jpg" />
          </image>
       </ImageView>
       <AnchorPane layoutX="-1.0" prefHeight="532.0" prefWidth="871.0">
